# LoFloat

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  Doxyfile  README.md  install.sh  setup.py
LoFloat/: __init__.py  _custom_ops.py  formats.py  layers.py  utils.py
benchmark/: Makefile  aptypes_round_bench.py  axpy_bench  axpy_bench.cpp  vec_add.cpp  vec_round  vec_round.cpp  virtual_round.cpp  virtual_round.py
examples/: MXfp8_gemm_example.cpp  Makefile  Oscillator.cpp  oscillator  plot_decay.py  plot_oscill.py  something
examples/MobileNet)_example/: MobileNetv1.py  collect_metadata.py  run_mobilenet.py
html/: md__r_e_a_d_m_e.html
playground/: test_recip.cpp
src/: Dot.hpp  Gemvs.hpp  LUT_apprx.h  LoF_layers.py  LoPy.py  LoPy_bind.cpp  LoPy_kernels.hpp  Lof_kernel.cu  Lof_kernels.h  Lopy_eti.cpp  Matrix.h  Quant_layer.cu  Torch_overload.cpp  Vector.h  blis_lof_gemm.hpp  build.sh  cache_info.h  cutlass_conv.cuh  cutlass_gemms.cu  cutlass_gemms.cuh  f_exceptions.hpp  fp_tools.hpp  gemms.hpp  layouts.h  lo_float.h  lo_float_half.hpp  lo_float_neon.h  lo_float_sci.hpp  lo_int.h  lo_pack.hpp  mx_round.cuh  neon_macros.h  platform_macros.h  pybind_instantiations.cpp  pybind_instantiations.hpp  setup.py  simd_helpers.hpp  table_maker.hpp  template_helpers.h
src/LoFloat.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/Pytorch_ext/: Quant_Layer.py
test/: CmakeLists.txt  Makefile  bench_blis_accum.cpp  comparison_tests.cpp  cuda_test.cu  dot_test.cpp  fp8_enum_test.cpp  gemm_test.cpp  gemm_test.cu  lo_float_test.cpp  lo_int_test.cpp  perf_mx_round_cuda.cu  pybind_tests.py  recip_test.cpp  round_to_odd.cu  sine  sine_test.cpp  small_rounding_test.cpp  stoch_arith_test.cpp  stoch_expect_test.cpp  stoch_prob_test.cpp  subnormal_test.cpp  test_blis_lof.cpp  test_blis_lof_accum.cpp  test_conv2d_cuda.cu  test_dot  test_exceptions.cpp  test_fixed_point.cpp  test_fixed_point_cuda.cu  test_float_comp.cpp  test_float_int  test_float_to_int.cpp  test_gemm  test_lo_float  test_lo_float_arith.cpp  test_lo_int_cuda.cu  test_lopy_kernels.cpp  test_mx_round_py.py  test_pack.cpp  test_pack_cuda.cu  (+13 more)
